@@ -752,7 +752,7 @@ do_multiply (int rd, int rr, int signed1, int signed2, int shift)
 }
 
 // handle illegal instructions
-static OP_FUNC_TYPE avr_op_ILLEGAL (int rd, int rr)
+static OP_FUNC_TYPE func_ILLEGAL (int rd, int rr)
 {
   char buf[128];
   sprintf (buf, "illegal opcode %04x", rr);
@@ -764,7 +764,7 @@ static OP_FUNC_TYPE avr_op_ILLEGAL (int rd, int rr)
 
 /* opcodes with no operands */
 /* 1001 0101 0001 1001 | EICALL */
-static OP_FUNC_TYPE avr_op_EICALL (int rd, int rr)
+static OP_FUNC_TYPE func_EICALL (int rd, int rr)
 {
   if (arch.has_eind)
     {
@@ -775,12 +775,12 @@ static OP_FUNC_TYPE avr_op_EICALL (int rd, int rr)
     }
   else
     {
-      avr_op_ILLEGAL (0, 0x9519);
+      func_ILLEGAL (0, 0x9519);
     }
 }
 
 /* 1001 0100 0001 1001 | EIJMP */
-static OP_FUNC_TYPE avr_op_EIJMP (int rd, int rr)
+static OP_FUNC_TYPE func_EIJMP (int rd, int rr)
 {
   if (arch.has_eind)
     {
@@ -790,25 +790,25 @@ static OP_FUNC_TYPE avr_op_EIJMP (int rd, int rr)
     }
   else
     {
-      avr_op_ILLEGAL (0, 0x9419);
+      func_ILLEGAL (0, 0x9419);
     }
 }
 
 /* 1001 0101 1101 1000 | ELPM */
-static OP_FUNC_TYPE avr_op_ELPM (int rd, int rr)
+static OP_FUNC_TYPE func_ELPM (int rd, int rr)
 {
   load_program_memory (0, 1, 0);
 }
 
 /* 1001 0101 1111 1000 | ESPM */
-static OP_FUNC_TYPE avr_op_ESPM (int rd, int rr)
+static OP_FUNC_TYPE func_ESPM (int rd, int rr)
 {
-  avr_op_ILLEGAL (0, 0x95F8);
+  func_ILLEGAL (0, 0x95F8);
   //TODO
 }
 
 /* 1001 0101 0000 1001 | ICALL */
-static OP_FUNC_TYPE avr_op_ICALL (int rd, int rr)
+static OP_FUNC_TYPE func_ICALL (int rd, int rr)
 {
   push_PC();
   cpu_PC = get_word_reg (REGZ);
@@ -816,52 +816,52 @@ static OP_FUNC_TYPE avr_op_ICALL (int rd, int rr)
 }
 
 /* 1001 0100 0000 1001 | IJMP */
-static OP_FUNC_TYPE avr_op_IJMP (int rd, int rr)
+static OP_FUNC_TYPE func_IJMP (int rd, int rr)
 {
   cpu_PC = get_word_reg (REGZ);
 }
 
 /* 1001 0101 1100 1000 | LPM */
-static OP_FUNC_TYPE avr_op_LPM (int rd, int rr)
+static OP_FUNC_TYPE func_LPM (int rd, int rr)
 {
   load_program_memory (0, 0, 0);
 }
 
 /* 0000 0000 0000 0000 | NOP */
-static OP_FUNC_TYPE avr_op_NOP (int rd, int rr)
+static OP_FUNC_TYPE func_NOP (int rd, int rr)
 {
 }
 
 /* 1001 0101 0000 1000 | RET */
-static OP_FUNC_TYPE avr_op_RET (int rd, int rr)
+static OP_FUNC_TYPE func_RET (int rd, int rr)
 {
   pop_PC();
   add_program_cycles (arch.pc_3bytes);
 }
 
 /* 1001 0101 0001 1000 | RETI */
-static OP_FUNC_TYPE avr_op_RETI (int rd, int rr)
+static OP_FUNC_TYPE func_RETI (int rd, int rr)
 {
-  avr_op_RET (rd, rr);
+  func_RET (rd, rr);
   update_flags (FLAG_I, FLAG_I);
 }
 
 /* 1001 0101 1000 1000 | SLEEP */
-static OP_FUNC_TYPE avr_op_SLEEP (int rd, int rr)
+static OP_FUNC_TYPE func_SLEEP (int rd, int rr)
 {
   // we don't have anything to wake us up, so just pretend we wake
   // up immediately
 }
 
 /* 1001 0101 1110 1000 | SPM */
-static OP_FUNC_TYPE avr_op_SPM (int rd, int rr)
+static OP_FUNC_TYPE func_SPM (int rd, int rr)
 {
-  avr_op_ILLEGAL (0,0x95E8);
+  func_ILLEGAL (0,0x95E8);
   //TODO
 }
 
 /* 1001 0101 1010 1000 | WDR */
-static OP_FUNC_TYPE avr_op_WDR (int rd, int rr)
+static OP_FUNC_TYPE func_WDR (int rd, int rr)
 {
   // we don't have a watchdog, so do nothing
 }
@@ -869,76 +869,76 @@ static OP_FUNC_TYPE avr_op_WDR (int rd, int rr)
 
 /* opcodes with two 5-bit register (Rd and Rr) operands */
 /* 0001 11rd dddd rrrr | ADC or ROL */
-static OP_FUNC_TYPE avr_op_ADC (int rd, int rr)
+static OP_FUNC_TYPE func_ADC (int rd, int rr)
 {
   do_addition_8 (rd, rr, get_carry());
 }
 
 /* 0000 11rd dddd rrrr | ADD or LSL */
-static OP_FUNC_TYPE avr_op_ADD (int rd, int rr)
+static OP_FUNC_TYPE func_ADD (int rd, int rr)
 {
   do_addition_8 (rd, rr, 0);
 }
 
 /* 0010 00rd dddd rrrr | AND or TST */
-static OP_FUNC_TYPE avr_op_AND (int rd, int rr)
+static OP_FUNC_TYPE func_AND (int rd, int rr)
 {
   int result = get_reg (rd) & get_reg (rr);
   store_logical_result (rd, result);
 }
 
 /* 0001 01rd dddd rrrr | CP */
-static OP_FUNC_TYPE avr_op_CP (int rd, int rr)
+static OP_FUNC_TYPE func_CP (int rd, int rr)
 {
   do_subtraction_8 (get_reg (rd), get_reg (rr), 0, 0);
 }
 
 /* 0000 01rd dddd rrrr | CPC */
-static OP_FUNC_TYPE avr_op_CPC (int rd, int rr)
+static OP_FUNC_TYPE func_CPC (int rd, int rr)
 {
   do_subtraction_8 (get_reg (rd), get_reg (rr), get_carry(), 1);
 }
 
 /* 0001 00rd dddd rrrr | CPSE */
-static OP_FUNC_TYPE avr_op_CPSE (int rd, int rr)
+static OP_FUNC_TYPE func_CPSE (int rd, int rr)
 {
   skip_instruction_on_condition (get_reg (rd) == get_reg (rr));
 }
 
 /* 0010 01rd dddd rrrr | EOR or CLR */
-static OP_FUNC_TYPE avr_op_EOR (int rd, int rr)
+static OP_FUNC_TYPE func_EOR (int rd, int rr)
 {
   int result = get_reg (rd) ^ get_reg (rr);
   store_logical_result (rd, result);
 }
 
 /* 0010 11rd dddd rrrr | MOV */
-static OP_FUNC_TYPE avr_op_MOV (int rd, int rr)
+static OP_FUNC_TYPE func_MOV (int rd, int rr)
 {
   put_reg (rd, get_reg (rr));
 }
 
 /* 1001 11rd dddd rrrr | MUL */
-static OP_FUNC_TYPE avr_op_MUL (int rd, int rr)
+static OP_FUNC_TYPE func_MUL (int rd, int rr)
 {
   do_multiply (rd, rr, 0, 0, 0);
 }
 
 /* 0010 10rd dddd rrrr | OR */
-static OP_FUNC_TYPE avr_op_OR (int rd, int rr)
+static OP_FUNC_TYPE func_OR (int rd, int rr)
 {
   int result = get_reg (rd) | get_reg (rr);
   store_logical_result (rd, result);
 }
 
 /* 0000 10rd dddd rrrr | SBC */
-static OP_FUNC_TYPE avr_op_SBC (int rd, int rr)
+static OP_FUNC_TYPE func_SBC (int rd, int rr)
 {
   put_reg (rd, do_subtraction_8 (get_reg (rd), get_reg (rr), get_carry(), 1));
 }
 
 /* 0001 10rd dddd rrrr | SUB */
-static OP_FUNC_TYPE avr_op_SUB (int rd, int rr)
+static OP_FUNC_TYPE func_SUB (int rd, int rr)
 {
   put_reg (rd, do_subtraction_8 (get_reg (rd), get_reg (rr), 0, 0));
 }
@@ -946,14 +946,14 @@ static OP_FUNC_TYPE avr_op_SUB (int rd, int rr)
 
 /* opcode with a single register (Rd) as operand */
 /* 1001 010d dddd 0101 | ASR */
-static OP_FUNC_TYPE avr_op_ASR (int rd, int rr)
+static OP_FUNC_TYPE func_ASR (int rd, int rr)
 {
   int value = get_reg (rd);
   rotate_right (rd, value, value & 0x80);
 }
 
 /* 1001 010d dddd 0000 | COM */
-static OP_FUNC_TYPE avr_op_COM (int rd, int rr)
+static OP_FUNC_TYPE func_COM (int rd, int rr)
 {
   int result = 0xFF & ~get_reg (rd);
   put_reg (rd, result);
@@ -962,7 +962,7 @@ static OP_FUNC_TYPE avr_op_COM (int rd, int rr)
 }
 
 /* 1001 010d dddd 1010 | DEC */
-static OP_FUNC_TYPE avr_op_DEC (int rd, int rr)
+static OP_FUNC_TYPE func_DEC (int rd, int rr)
 {
   int result = (get_reg (rd) - 1) & 0xFF;
   put_reg (rd, result);
@@ -971,19 +971,19 @@ static OP_FUNC_TYPE avr_op_DEC (int rd, int rr)
 }
 
 /* 1001 000d dddd 0110 | ELPM */
-static OP_FUNC_TYPE avr_op_ELPM_Z (int rd, int rr)
+static OP_FUNC_TYPE func_ELPM_Z (int rd, int rr)
 {
   load_program_memory (rd, 1, 0);
 }
 
 /* 1001 000d dddd 0111 | ELPM */
-static OP_FUNC_TYPE avr_op_ELPM_Z_incr (int rd, int rr)
+static OP_FUNC_TYPE func_ELPM_Z_incr (int rd, int rr)
 {
   load_program_memory (rd, 1, 1);
 }
 
 /* 1001 010d dddd 0011 | INC */
-static OP_FUNC_TYPE avr_op_INC (int rd, int rr)
+static OP_FUNC_TYPE func_INC (int rd, int rr)
 {
   int result = (get_reg (rd) + 1) & 0xFF;
   put_reg (rd, result);
@@ -992,80 +992,80 @@ static OP_FUNC_TYPE avr_op_INC (int rd, int rr)
 }
 
 /* 1001 000d dddd 0000 | LDS */
-static OP_FUNC_TYPE avr_op_LDS (int rd, int rr)
+static OP_FUNC_TYPE func_LDS (int rd, int rr)
 {
   //TODO:RAMPD
   put_reg (rd, data_read_byte (rr));
 }
 
 /* 1001 000d dddd 1100 | LD */
-static OP_FUNC_TYPE avr_op_LD_X (int rd, int rr)
+static OP_FUNC_TYPE func_LD_X (int rd, int rr)
 {
   load_indirect (rd, REGX, 0, 0);
 }
 
 /* 1001 000d dddd 1110 | LD */
-static OP_FUNC_TYPE avr_op_LD_X_decr (int rd, int rr)
+static OP_FUNC_TYPE func_LD_X_decr (int rd, int rr)
 {
   load_indirect (rd, REGX, -1, 0);
 }
 
 /* 1001 000d dddd 1101 | LD */
-static OP_FUNC_TYPE avr_op_LD_X_incr (int rd, int rr)
+static OP_FUNC_TYPE func_LD_X_incr (int rd, int rr)
 {
   load_indirect (rd, REGX, 1, 0);
 }
 
 /* 1001 000d dddd 1010 | LD */
-static OP_FUNC_TYPE avr_op_LD_Y_decr (int rd, int rr)
+static OP_FUNC_TYPE func_LD_Y_decr (int rd, int rr)
 {
   load_indirect (rd, REGY, -1, 0);
 }
 
 /* 1001 000d dddd 1001 | LD */
-static OP_FUNC_TYPE avr_op_LD_Y_incr (int rd, int rr)
+static OP_FUNC_TYPE func_LD_Y_incr (int rd, int rr)
 {
   load_indirect (rd, REGY, 1, 0);
 }
 
 /* 1001 000d dddd 0010 | LD */
-static OP_FUNC_TYPE avr_op_LD_Z_decr (int rd, int rr)
+static OP_FUNC_TYPE func_LD_Z_decr (int rd, int rr)
 {
   load_indirect (rd, REGZ, -1, 0);
 }
 
 /* 1001 000d dddd 0010 | LD */
-static OP_FUNC_TYPE avr_op_LD_Z_incr (int rd, int rr)
+static OP_FUNC_TYPE func_LD_Z_incr (int rd, int rr)
 {
   load_indirect (rd, REGZ, 1, 0);
 }
 
 /* 1001 000d dddd 0100 | LPM Z */
-static OP_FUNC_TYPE avr_op_LPM_Z (int rd, int rr)
+static OP_FUNC_TYPE func_LPM_Z (int rd, int rr)
 {
   load_program_memory (rd, 0, 0);
 }
 
 /* 1001 000d dddd 0101 | LPM Z+ */
-static OP_FUNC_TYPE avr_op_LPM_Z_incr (int rd, int rr)
+static OP_FUNC_TYPE func_LPM_Z_incr (int rd, int rr)
 {
   load_program_memory (rd, 0, 1);
 }
 
 /* 1001 010d dddd 0110 | LSR */
-static OP_FUNC_TYPE avr_op_LSR (int rd, int rr)
+static OP_FUNC_TYPE func_LSR (int rd, int rr)
 {
   rotate_right (rd, get_reg (rd), 0);
 }
 
 /* 1001 010d dddd 0001 | NEG */
-static OP_FUNC_TYPE avr_op_NEG (int rd, int rr)
+static OP_FUNC_TYPE func_NEG (int rd, int rr)
 {
   put_reg (rd, do_subtraction_8 (0, get_reg (rd), 0, 0));
 }
 
 /* 1001 000d dddd 1111 | POP */
-static OP_FUNC_TYPE avr_op_POP (int rd, int rr)
+static OP_FUNC_TYPE func_POP (int rd, int rr)
 {
   put_reg (rd, pop_byte());
 }
@@ -1093,25 +1093,25 @@ xmega_atomic (int regno, int op)
 }
 
 /* 1001 001d dddd 0100 | XCH */
-static OP_FUNC_TYPE avr_op_XCH (int rd, int rr)
+static OP_FUNC_TYPE func_XCH (int rd, int rr)
 {
   xmega_atomic (rd, ID_XCH);
 }
 
 /* 1001 001d dddd 0101 | LAS */
-static OP_FUNC_TYPE avr_op_LAS (int rd, int rr)
+static OP_FUNC_TYPE func_LAS (int rd, int rr)
 {
   xmega_atomic (rd, ID_LAS);
 }
 
 /* 1001 001d dddd 0110 | LAC */
-static OP_FUNC_TYPE avr_op_LAC (int rd, int rr)
+static OP_FUNC_TYPE func_LAC (int rd, int rr)
 {
   xmega_atomic (rd, ID_LAC);
 }
 
 /* 1001 001d dddd 0111 | LAT */
-static OP_FUNC_TYPE avr_op_LAT (int rd, int rr)
+static OP_FUNC_TYPE func_LAT (int rd, int rr)
 {
   xmega_atomic (rd, ID_LAT);
 }
@@ -1119,68 +1119,68 @@ static OP_FUNC_TYPE avr_op_LAT (int rd, int rr)
 #endif // ISA_XMEGA
 
 /* 1001 001d dddd 1111 | PUSH */
-static OP_FUNC_TYPE avr_op_PUSH (int rd, int rr)
+static OP_FUNC_TYPE func_PUSH (int rd, int rr)
 {
   push_byte (get_reg (rd));
 }
 
 /* 1001 010d dddd 0111 | ROR */
-static OP_FUNC_TYPE avr_op_ROR (int rd, int rr)
+static OP_FUNC_TYPE func_ROR (int rd, int rr)
 {
   rotate_right (rd, get_reg (rd), get_carry());
 }
 
 /* 1001 001d dddd 0000 | STS */
-static OP_FUNC_TYPE avr_op_STS (int rd, int rr)
+static OP_FUNC_TYPE func_STS (int rd, int rr)
 {
   //TODO:RAMPD
   data_write_byte (rr, get_reg (rd));
 }
 
 /* 1001 001d dddd 1100 | ST */
-static OP_FUNC_TYPE avr_op_ST_X (int rd, int rr)
+static OP_FUNC_TYPE func_ST_X (int rd, int rr)
 {
   store_indirect (rd, REGX, 0, 0);
 }
 
 /* 1001 001d dddd 1110 | ST */
-static OP_FUNC_TYPE avr_op_ST_X_decr (int rd, int rr)
+static OP_FUNC_TYPE func_ST_X_decr (int rd, int rr)
 {
   store_indirect (rd, REGX, -1, 0);
 }
 
 /* 1001 001d dddd 1101 | ST */
-static OP_FUNC_TYPE avr_op_ST_X_incr (int rd, int rr)
+static OP_FUNC_TYPE func_ST_X_incr (int rd, int rr)
 {
   store_indirect (rd, REGX, 1, 0);
 }
 
 /* 1001 001d dddd 1010 | ST */
-static OP_FUNC_TYPE avr_op_ST_Y_decr (int rd, int rr)
+static OP_FUNC_TYPE func_ST_Y_decr (int rd, int rr)
 {
   store_indirect (rd, REGY, -1, 0);
 }
 
 /* 1001 001d dddd 1001 | ST */
-static OP_FUNC_TYPE avr_op_ST_Y_incr (int rd, int rr)
+static OP_FUNC_TYPE func_ST_Y_incr (int rd, int rr)
 {
   store_indirect (rd, REGY, 1, 0);
 }
 
 /* 1001 001d dddd 0010 | ST */
-static OP_FUNC_TYPE avr_op_ST_Z_decr (int rd, int rr)
+static OP_FUNC_TYPE func_ST_Z_decr (int rd, int rr)
 {
   store_indirect (rd, REGZ, -1, 0);
 }
 
 /* 1001 001d dddd 0001 | ST */
-static OP_FUNC_TYPE avr_op_ST_Z_incr (int rd, int rr)
+static OP_FUNC_TYPE func_ST_Z_incr (int rd, int rr)
 {
   store_indirect (rd, REGZ, 1, 0);
 }
 
 /* 1001 010d dddd 0010 | SWAP */
-static OP_FUNC_TYPE avr_op_SWAP (int rd, int rr)
+static OP_FUNC_TYPE func_SWAP (int rd, int rr)
 {
   int value = get_reg (rd);
   put_reg (rd, ((value << 4) & 0xF0) | ((value >> 4) & 0x0F));
@@ -1188,26 +1188,26 @@ static OP_FUNC_TYPE avr_op_SWAP (int rd, int rr)
 
 /* opcodes with a register (Rd) and a constant data (K) as operands */
 /* 0111 KKKK dddd KKKK | CBR or ANDI */
-static OP_FUNC_TYPE avr_op_ANDI (int rd, int rr)
+static OP_FUNC_TYPE func_ANDI (int rd, int rr)
 {
   int result = get_reg (rd) & rr;
   store_logical_result (rd, result);
 }
 
 /* 0011 KKKK dddd KKKK | CPI */
-static OP_FUNC_TYPE avr_op_CPI (int rd, int rr)
+static OP_FUNC_TYPE func_CPI (int rd, int rr)
 {
   do_subtraction_8 (get_reg (rd), rr, 0, 0);
 }
 
 /* 1110 KKKK dddd KKKK | LDI or SER */
-static OP_FUNC_TYPE avr_op_LDI (int rd, int rr)
+static OP_FUNC_TYPE func_LDI (int rd, int rr)
 {
   put_reg (rd, rr);
 }
 
 /* 0110 KKKK dddd KKKK | SBR or ORI */
-static OP_FUNC_TYPE avr_op_ORI (int rd, int rr)
+static OP_FUNC_TYPE func_ORI (int rd, int rr)
 {
   int result = get_reg (rd) | rr;
   store_logical_result (rd, result);
@@ -1215,26 +1215,26 @@ static OP_FUNC_TYPE avr_op_ORI (int rd, int rr)
 
 /* 0100 KKKK dddd KKKK | SBCI */
 /* 0101 KKKK dddd KKKK | SUBI */
-static INLINE OP_FUNC_TYPE avr_op_SBCI_SUBI (int rd, int rr, int carry,
+static INLINE OP_FUNC_TYPE func_SBCI_SUBI (int rd, int rr, int carry,
                                              int use_carry)
 {
   put_reg (rd, do_subtraction_8 (get_reg (rd), rr, carry, use_carry));
 }
 
-static OP_FUNC_TYPE avr_op_SBCI (int rd, int rr)
+static OP_FUNC_TYPE func_SBCI (int rd, int rr)
 {
-  avr_op_SBCI_SUBI (rd, rr, get_carry(), 1);
+  func_SBCI_SUBI (rd, rr, get_carry(), 1);
 }
 
-static OP_FUNC_TYPE avr_op_SUBI (int rd, int rr)
+static OP_FUNC_TYPE func_SUBI (int rd, int rr)
 {
-  avr_op_SBCI_SUBI (rd, rr, 0, 0);
+  func_SBCI_SUBI (rd, rr, 0, 0);
 }
 
 
 /* opcodes with a register (Rd) and a register bit number (b) as operands */
 /* 1111 100d dddd 0bbb | BLD */
-static OP_FUNC_TYPE avr_op_BLD (int rd, int rr)
+static OP_FUNC_TYPE func_BLD (int rd, int rr)
 {
   int value = get_reg (rd) | rr;
   unsigned flag = (data_read_byte (SREG) >> FLAG_T_BIT) & 1;
@@ -1243,20 +1243,20 @@ static OP_FUNC_TYPE avr_op_BLD (int rd, int rr)
 }
 
 /* 1111 101d dddd 0bbb | BST */
-static OP_FUNC_TYPE avr_op_BST (int rd, int rr)
+static OP_FUNC_TYPE func_BST (int rd, int rr)
 {
   int bit = get_reg (rd) & rr;
   update_flags (FLAG_T, bit ? FLAG_T : 0);
 }
 
 /* 1111 110d dddd 0bbb | SBRC */
-static OP_FUNC_TYPE avr_op_SBRC (int rd, int rr)
+static OP_FUNC_TYPE func_SBRC (int rd, int rr)
 {
   skip_instruction_on_condition (!(get_reg (rd) & rr));
 }
 
 /* 1111 111d dddd 0bbb | SBRS */
-static OP_FUNC_TYPE avr_op_SBRS (int rd, int rr)
+static OP_FUNC_TYPE func_SBRS (int rd, int rr)
 {
   skip_instruction_on_condition (get_reg (rd) & rr);
 }
@@ -1264,13 +1264,13 @@ static OP_FUNC_TYPE avr_op_SBRS (int rd, int rr)
 /* opcodes with a relative 7-bit address (k) and a register bit number (b)
    as operands */
 /* 1111 01kk kkkk kbbb | BRBC */
-static OP_FUNC_TYPE avr_op_BRBC (int rd, int rr)
+static OP_FUNC_TYPE func_BRBC (int rd, int rr)
 {
   branch_on_sreg_condition (rd, rr, 0);
 }
 
 /* 1111 00kk kkkk kbbb | BRBS */
-static OP_FUNC_TYPE avr_op_BRBS (int rd, int rr)
+static OP_FUNC_TYPE func_BRBS (int rd, int rr)
 {
   branch_on_sreg_condition (rd, rr, 1);
 }
@@ -1279,25 +1279,25 @@ static OP_FUNC_TYPE avr_op_BRBS (int rd, int rr)
 /* opcodes with a 6-bit address displacement (q) and a register (Rd)
    as operands */
 /* 10q0 qq0d dddd 1qqq | LDD */
-static OP_FUNC_TYPE avr_op_LDD_Y (int rd, int rr)
+static OP_FUNC_TYPE func_LDD_Y (int rd, int rr)
 {
   load_indirect (rd, REGY, 0, rr);
 }
 
 /* 10q0 qq0d dddd 0qqq | LDD */
-static OP_FUNC_TYPE avr_op_LDD_Z (int rd, int rr)
+static OP_FUNC_TYPE func_LDD_Z (int rd, int rr)
 {
   load_indirect (rd, REGZ, 0, rr);
 }
 
 /* 10q0 qq1d dddd 1qqq | STD */
-static OP_FUNC_TYPE avr_op_STD_Y (int rd, int rr)
+static OP_FUNC_TYPE func_STD_Y (int rd, int rr)
 {
   store_indirect (rd, REGY, 0, rr);
 }
 
 /* 10q0 qq1d dddd 0qqq | STD */
-static OP_FUNC_TYPE avr_op_STD_Z (int rd, int rr)
+static OP_FUNC_TYPE func_STD_Z (int rd, int rr)
 {
   store_indirect (rd, REGZ, 0, rr);
 }
@@ -1305,13 +1305,13 @@ static OP_FUNC_TYPE avr_op_STD_Z (int rd, int rr)
 
 /* opcodes with a absolute 22-bit address (k) operand */
 /* 1001 010k kkkk 110k | JMP */
-static OP_FUNC_TYPE avr_op_JMP (int rd, int rr)
+static OP_FUNC_TYPE func_JMP (int rd, int rr)
 {
   cpu_PC = rr | (rd << 16);
 }
 
 /* 1001 010k kkkk 111k | CALL */
-static OP_FUNC_TYPE avr_op_CALL (int rd, int rr)
+static OP_FUNC_TYPE func_CALL (int rd, int rr)
 {
   push_PC();
   cpu_PC = rr | (rd << 16);
@@ -1323,13 +1323,13 @@ static OP_FUNC_TYPE avr_op_CALL (int rd, int rr)
 /* BCLR takes place of CL{C,Z,N,V,S,H,T,I} */
 /* BSET takes place of SE{C,Z,N,V,S,H,T,I} */
 /* 1001 0100 1sss 1000 | BCLR */
-static OP_FUNC_TYPE avr_op_BCLR (int rd, int rr)
+static OP_FUNC_TYPE func_BCLR (int rd, int rr)
 {
   update_flags (rd, 0);
 }
 
 /* 1001 0100 0sss 1000 | BSET */
-static OP_FUNC_TYPE avr_op_BSET (int rd, int rr)
+static OP_FUNC_TYPE func_BSET (int rd, int rr)
 {
   update_flags (rd, rd);
 }
@@ -1337,7 +1337,7 @@ static OP_FUNC_TYPE avr_op_BSET (int rd, int rr)
 
 /* opcodes with a 6-bit constant (K) and a register (Rd) as operands */
 /* 1001 0110 KKdd KKKK | ADIW */
-static OP_FUNC_TYPE avr_op_ADIW (int rd, int rr)
+static OP_FUNC_TYPE func_ADIW (int rd, int rr)
 {
   int svalue = get_word_reg (rd);
   int evalue = svalue + rr;
@@ -1352,7 +1352,7 @@ static OP_FUNC_TYPE avr_op_ADIW (int rd, int rr)
 }
 
 /* 1001 0111 KKdd KKKK | SBIW */
-static OP_FUNC_TYPE avr_op_SBIW (int rd, int rr)
+static OP_FUNC_TYPE func_SBIW (int rd, int rr)
 {
   int svalue = get_word_reg (rd);
   int evalue = svalue - rr;
@@ -1369,25 +1369,25 @@ static OP_FUNC_TYPE avr_op_SBIW (int rd, int rr)
 
 /* opcodes with a 5-bit IO Addr (A) and register bit number (b) as operands */
 /* 1001 1000 AAAA Abbb | CBI */
-static OP_FUNC_TYPE avr_op_CBI (int rd, int rr)
+static OP_FUNC_TYPE func_CBI (int rd, int rr)
 {
   data_write_byte (rd, data_read_byte (rd) & ~(rr));
 }
 
 /* 1001 1010 AAAA Abbb | SBI */
-static OP_FUNC_TYPE avr_op_SBI (int rd, int rr)
+static OP_FUNC_TYPE func_SBI (int rd, int rr)
 {
   data_write_byte (rd, data_read_byte (rd) | rr);
 }
 
 /* 1001 1001 AAAA Abbb | SBIC */
-static OP_FUNC_TYPE avr_op_SBIC (int rd, int rr)
+static OP_FUNC_TYPE func_SBIC (int rd, int rr)
 {
   skip_instruction_on_condition (!(data_read_byte (rd) & rr));
 }
 
 /* 1001 1011 AAAA Abbb | SBIS */
-static OP_FUNC_TYPE avr_op_SBIS (int rd, int rr)
+static OP_FUNC_TYPE func_SBIS (int rd, int rr)
 {
   skip_instruction_on_condition (data_read_byte (rd) & rr);
 }
@@ -1395,13 +1395,13 @@ static OP_FUNC_TYPE avr_op_SBIS (int rd, int rr)
 
 /* opcodes with a 6-bit IO Addr (A) and register (Rd) as operands */
 /* 1011 0AAd dddd AAAA | IN */
-static OP_FUNC_TYPE avr_op_IN (int rd, int rr)
+static OP_FUNC_TYPE func_IN (int rd, int rr)
 {
   put_reg (rd, data_read_byte (rr));
 }
 
 /* 1011 1AAd dddd AAAA | OUT */
-static OP_FUNC_TYPE avr_op_OUT (int rd, int rr)
+static OP_FUNC_TYPE func_OUT (int rd, int rr)
 {
   data_write_byte (rr, get_reg (rd));
 }
@@ -1409,7 +1409,7 @@ static OP_FUNC_TYPE avr_op_OUT (int rd, int rr)
 
 /* opcodes with a relative 12-bit address (k) operand */
 /* 1100 kkkk kkkk kkkk | RJMP */
-static OP_FUNC_TYPE avr_op_RJMP (int rd, int rr)
+static OP_FUNC_TYPE func_RJMP (int rd, int rr)
 {
   int delta = rr;
   //if (delta & 0x800) delta |= ~0xFFF;
@@ -1423,7 +1423,7 @@ static OP_FUNC_TYPE avr_op_RJMP (int rd, int rr)
 }
 
 /* 1101 kkkk kkkk kkkk | RCALL */
-static OP_FUNC_TYPE avr_op_RCALL (int rd, int rr)
+static OP_FUNC_TYPE func_RCALL (int rd, int rr)
 {
   int delta = rr;
   // if (delta & 0x800) delta |= ~0xFFF;
@@ -1438,7 +1438,7 @@ static OP_FUNC_TYPE avr_op_RCALL (int rd, int rr)
 
 /* opcodes with two 4-bit register (Rd and Rr) operands */
 /* 0000 0001 dddd rrrr | MOVW */
-static OP_FUNC_TYPE avr_op_MOVW (int rd, int rr)
+static OP_FUNC_TYPE func_MOVW (int rd, int rr)
 {
 #ifdef LOG_DUMP
   put_word_reg (rd, get_word_reg (rr));
@@ -1449,32 +1449,32 @@ static OP_FUNC_TYPE avr_op_MOVW (int rd, int rr)
 }
 
 /* 0000 0010 dddd rrrr | MULS */
-static OP_FUNC_TYPE avr_op_MULS (int rd, int rr)
+static OP_FUNC_TYPE func_MULS (int rd, int rr)
 {
   do_multiply (rd, rr, 1, 1, 0);
 }
 
 /* opcodes with two 3-bit register (Rd and Rr) operands */
 /* 0000 0011 0ddd 0rrr | MULSU */
-static OP_FUNC_TYPE avr_op_MULSU (int rd, int rr)
+static OP_FUNC_TYPE func_MULSU (int rd, int rr)
 {
   do_multiply (rd, rr, 1, 0, 0);
 }
 
 /* 0000 0011 0ddd 1rrr | FMUL */
-static OP_FUNC_TYPE avr_op_FMUL (int rd, int rr)
+static OP_FUNC_TYPE func_FMUL (int rd, int rr)
 {
   do_multiply (rd, rr, 0, 0, 1);
 }
 
 /* 0000 0011 1ddd 0rrr | FMULS */
-static OP_FUNC_TYPE avr_op_FMULS (int rd, int rr)
+static OP_FUNC_TYPE func_FMULS (int rd, int rr)
 {
   do_multiply (rd, rr, 1, 1, 1);
 }
 
 /* 0000 0011 1ddd 1rrr | FMULSU */
-static OP_FUNC_TYPE avr_op_FMULSU (int rd, int rr)
+static OP_FUNC_TYPE func_FMULSU (int rd, int rr)
 {
   do_multiply (rd, rr, 1, 0, 1);
 }
@@ -1756,7 +1756,7 @@ const opcode_t opcode_func_array[] = {
   [ID_dummy] = { NULL, NULL, 0, 0 },
 
 #define AVR_INSN(ID, N_WORDS, N_TICKS, NAME)                    \
-  [ID_ ## ID] = { avr_op_ ## ID, NAME, N_WORDS, N_TICKS },
+  [ID_ ## ID] = { func_ ## ID, NAME, N_WORDS, N_TICKS },
 #include "avr-insn.def"
 #undef AVR_INSN
 };
